Modify HTML file

--- a/index.html
+++ b/index.html
@@ -477,18 +477,10 @@
                 </div>
                 <div class="content">
                     <form action="">
-                        <input
-                            class="main-input"
-                            type="text"
-                            name="name"
-                            placeholder="Your Name"
-                        />
-                        <input
-                            class="main-input"
-                            type="email"
-                            name="mail"
-                            placeholder="Your Email"
-                        />
+                        <input class="main-input" type="text" name="name" />
+                        <span class="placeholder">Your Name</span>
+                        <input class="main-input" type="email" name="email" />
+                        <span class="placeholder">Your Email</span>
                         <textarea
                             class="main-input"
                             name="message"
@@ -497,20 +489,49 @@
                         <input type="submit" value="Send Message" />
                     </form>
                     <div class="info">
-                        <h4>Get In Touch</h4>
-                        <span class="phone">+00 123 456 789</span>
-                        <span class="phone">+00 123 456 789</span>
-                        <h4>Where We Are</h4>
-                        <address>
-                            Awesome Address 17 <br />
-                            New York, NYC <br />
-                            123-4567-890 <br />
-                            USA
-                        </address>
+                        <div>
+                            <h4>Get In Touch</h4>
+                            <span class="phone">+00 123 456 789</span>
+                            <span class="phone">+00 123 456 789</span>
+                        </div>
+                        <div>
+                            <h4>Where We Are</h4>
+                            <address>
+                                Awesome Address 17 <br />
+                                New York, NYC <br />
+                                123-4567-890 <br />
+                                USA
+                            </address>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <!-- End Contact -->
+        <!-- Footer -->
+        <footer>
+            <div class="container">
+                <img src="./images/logo.png" alt="" />
+                <p>We are social</p>
+                <div class="social-icons">
+                    <a href="#">
+                        <i class="fas fa-home"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-youtube"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                </div>
+                <p class="copyrights">
+                    &copy; 2022 <span>Kasper</span> All Rights Reserved
+                </p>
+            </div>
+        </footer>
+        <!-- End Footer -->
     </body>
 </html>
